--- a/document/src/frontespizio.tex
+++ b/document/src/frontespizio.tex
@@ -9,18 +9,22 @@
 \vspace{2mm}
 Dipartimento di Informatica -- Scienza e Ingegneria\\
 \vspace{2mm}
-Corso di Laurea in Ingegneria Informatica }}
+Corso di Laurea Magistrale in Ingegneria Informatica }}
 %se Laurea Magistrale scrivere "Corso di Laurea Magistrale in Ingegneria Informatica"
 \end{center}
-\vspace{11.9mm}
+%\vspace{11.9mm}
+
+\vspace*{\fill}
 \begin{center}
 {\LARGE{\bf Simulazione di Fluidi in CUDA\\
 \vspace{5mm}
 }}
 \end{center}
-\vspace{11.9mm}
+%\vspace{11.9mm}
+\vspace*{\fill}
 \par
 \noindent
+\vfill
 \begin{minipage}[t]{0.47\textwidth}
 {\normalsize{\bf Professori:\\
 Prof. Dr. Stefano Mattoccia \\
